.provarCaches/00D410000011HE0EAM/objects/rstk__soprodconfexp__c.object
<CustomObject>
    <description>soprodconfexp__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__soprodconfexp_soprod__r.Name, 47) + &apos; - &apos; + rstk__soprodconfexp_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_desc__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_recidsource__c</fullName>
        <label>Source of Update Record ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_soprod__c</fullName>
        <label>Product Master</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Product Configuration Exports</relationshipLabel>
        <relationshipName>soprodconfexps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_sourcecomp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Component</label>
        <referenceTo>rstk__confcomp__c</referenceTo>
        <relationshipLabel>Product Configuration Exports</relationshipLabel>
        <relationshipName>soprodconfexps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_sourcegroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Group</label>
        <referenceTo>rstk__confgroup__c</referenceTo>
        <relationshipLabel>Product Configuration Exports</relationshipLabel>
        <relationshipName>soprodconfexps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_sourcesel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Selection</label>
        <referenceTo>rstk__confsel__c</referenceTo>
        <relationshipLabel>Product Configuration Exports</relationshipLabel>
        <relationshipName>soprodconfexps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_updatefield__c</fullName>
        <label>Field to be Updated</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfexp_updateobject__c</fullName>
        <label>Object to be Updated</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Product Configuration Export</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Exports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>